# librlm-rs

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: config.rs  error.rs  lib.rs  llm.rs  metadata.rs  parsing.rs  prompt.rs  repl.rs  rlm.rs  types.rs
