[package]
name = "librlm"
version = "0.1.0"
edition = "2021"
description = "Recursive Language Models (RLM) - inference-time paradigm for arbitrarily long prompts"
license = "MIT"

[dependencies]
mlua = { version = "0.10", features = ["luau", "serialize"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
tracing = "0.1"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
